# tileman

./: .gitignore  .gitmodules  .travis.yml  Changelog  DEVELOPMENT.ja.md  INSTALL.md  Makefile  README.md  Vagrantfile  bootstrap.sh  index.html  install.sh  params.json  tilecache.conf  tileproxy  tileproxy.lua  tileproxy_params  tileproxy_ssl
data/: japan.csv
debian/: changelog  control  copyright  rules
doc/: DEVELOPMENT.ja.md  LuaBitOp_ubuntu.patch  custom_style.md  extensive_configuration.dia  howto_make_tilecache_server.md  overview.odg  software_stack.odg  typical_configuration.dia
etc/: tileman.conf  tileman.conf.travis
etc/nginx/: ssl_params
lib/: clean.sh  install.sh
lib/iniparser3.0b/: Makefile
nginx/: common_location_params  install.sh  tileman_proxy_params  tileserver_params
nginx/conf.d/: geoip.conf  lua.conf  tilecache.conf  tileman.conf
nginx/script/: osmfj_tilecheck.lua  osmfj_tilecheck_s.lua  osmtile.lua  stilecheck.lua  tilecheck.lua  tileserver.lua
nginx/sites/: statictile  (+10 more)
osmosis/: osmosis-installer.sh
pkgs/: README  lua-nginx-redis_0.15-1_all.deb
render_expire/: Makefile.am  configure.ac  render_config.h
render_expire/iniparser3.0b/.svn/: all-wcprops  dir-prop-base  entries
render_expire/iniparser3.0b/src/.svn/: entries
render_expire/m4/.svn/: all-wcprops  entries
test/: example.html  load.sh  osm.xml  test_install.sh  tileman-test  travis_load.sh  travis_test_install.sh
tirex/: custom.conf  tirex.conf
updatedb/: README.md  install.sh  osm-loaddb  osm-updatedb  osm-updatedb.conf  osmdb.conf  update-tile.sh
vagrant/: Vagrantfile  bootstrap.sh
(+10 files in other folders)
